# CrewAIAnalysis

./: README.md  pyproject.toml
src/crewaianalysis/: crew.py  main.py
src/crewaianalysis/config/: agents.yaml  tasks.yaml
src/crewaianalysis/tools/: custom_tool.py
