[project]
name = "crewaianalysis"
version = "0.1.0"
description = "crewaianalysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "onnxruntime>=1.17.0,<1.24.0"
]

[project.scripts]
crewaianalysis = "crewaianalysis.main:run"
run_crew = "crewaianalysis.main:run"
train = "crewaianalysis.main:train"
replay = "crewaianalysis.main:replay"
test = "crewaianalysis.main:test"
run_with_trigger = "crewaianalysis.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]

[tool.crewai]
type = "crew"
